# django-kubernetes-backend

./: .flake8  .pre-commit-config.yaml  README.md  cspell.config.yaml  pyproject.toml
kubernetes_backend/: admin.py  client.py  manager.py  model.py  models.py  queryset.py
kubernetes_backend/models/: __init__.py  base.py  manager.py  model.py
tests/: setup.py  test_base.py  test_client.py  test_manager.py  test_model.py  test_queryset.py
