[project]
name = "django-kubernetes-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Taylor Mitchell"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["kubernetes (>=32.0.1,<33.0.0)", "django (>=5.1.7,<6.0.0)"]

[tool.black]
target-version = ['py313']

[tool.isort]
profile = "black"
multi_line_output = 3
py_version = 313

[tool.poetry]
packages = [{include = "django_kubernetes_backend"}]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
